--- a/src/style/element.scss
+++ b/src/style/element.scss
@@ -8,3 +8,25 @@
   border-radius: 6px;
   box-shadow: 0 0 12px rgb(0 0 0 / 5%);
 }
+/*mTable*/
+.table-box {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  //table-search表格搜索样式
+  .table-search{
+    padding: 18px 18px 0;
+    margin-bottom: 10px;
+    .el-form{
+      .el-form-item__content>*{
+        width: 100%;
+      }
+      //去除时间选择器上下padding
+      .el-range-editor.el-input__wrapper{
+        padding: 0 10px;
+      }
+  }
+}
+}
